--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <div class="app-container">
   <header class="app-header">
-    <h1>Gestionnaire de collections de scellés et de cartes TCG</h1>
+    <h1>Gestionnaire de collections TCG</h1>
   </header>
 
   <main class="app-content">
