--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -13,7 +13,7 @@
     <div class="event-line purchase">
       <mat-icon>shopping_cart</mat-icon>
 
-      <span class="event-title">Achat</span>
+      <span class="event-title">Acheté</span>
 
       <span class="event-price">
         {{ userItem.purchasePrice }}€
@@ -35,7 +35,7 @@
       <div class="event-line sell">
         <mat-icon>sell</mat-icon>
 
-        <span class="event-title">Vente</span>
+        <span class="event-title">Vendu</span>
 
         <span class="event-price">
           {{ userItem.sellingPrice }}€
@@ -58,7 +58,7 @@
       <div class="event-line open">
         <mat-icon>lock_open</mat-icon>
 
-        <span class="event-title">Ouverture</span>
+        <span class="event-title">Ouvert</span>
 
         <span class="event-date">
           le {{ userItem.sellingOrOpeningDate | date:'dd/MM/yyyy' }}
