Change color app header

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -7,7 +7,7 @@
 }
 
 .app-header {
-  background: linear-gradient(90deg, #d9caf0, #bb9fec);
+  background: linear-gradient(90deg, #d8d6db, #b6d4dd);
   box-shadow: 0 4px 12px rgba(0,0,0,0.4);
 }
 
