Only one line for UserItems page header

--- a/src/app/components/user-items/user-items.html
+++ b/src/app/components/user-items/user-items.html
@@ -1,29 +1,27 @@
 <div class="page-header">
 
-  <div class="page-header-left">
+  <div class="page-title">Mes Items</div>
 
-    <div class="page-title">Mes Items</div>
+  <div *ngIf="item$ | async as item" class="item-info">
 
-    <div *ngIf="item$ | async as item" class="item-info">
+    <span class="badge game">{{ item.game.name }}</span>
+    <span class="badge item-type">{{ item.itemType.name }}</span>
 
-      <span class="badge game">{{ item.game.name }}</span>
-      <span class="badge item-type">{{ item.itemType.name }}</span>
+    <span class="badge expansion" *ngIf="item.expansion.name !== 'Autre'">
+      {{ item.expansion.name }}
+    </span>
 
-      <span class="badge expansion" *ngIf="item.expansion.name !== 'Autre'">
-        {{ item.expansion.name }}
-      </span>
+    <span class="badge complement" *ngIf="item.complement">
+      {{ item.complement }}
+    </span>
 
-      <span class="badge complement" *ngIf="item.complement">
-        {{ item.complement }}
-      </span>
-
-      <span class="badge locale">{{ item.locale.name }}</span>
-
-    </div>
+    <span class="badge locale">{{ item.locale.name }}</span>
 
   </div>
 
-  <div class="page-header-right">
+  <span class="actions-spacer"></span>
+
+  <div>
     <app-back-button/>
   </div>
 
