Factorize html in ItemInfos component

--- a/src/app/pages/item-price-histories/item-price-histories-page.html
+++ b/src/app/pages/item-price-histories/item-price-histories-page.html
@@ -2,21 +2,8 @@
 
   <div class="page-title">Historique des prix</div>
 
-  <div *ngIf="item$ | async as item" class="item-info">
-
-    <span class="badge game">{{ item.game.name }}</span>
-    <span class="badge item-type">{{ item.itemType.name }}</span>
-
-    <span class="badge expansion" *ngIf="item.expansion.name !== 'Autre'">
-      {{ item.expansion.name }}
-    </span>
-
-    <span class="badge complement" *ngIf="item.complement">
-      {{ item.complement }}
-    </span>
-
-    <span class="badge locale">{{ item.locale.name }}</span>
-
+  <div *ngIf="item$ | async as item">
+    <app-item-infos [item]="item"/>
   </div>
 
   <span class="actions-spacer"></span>
