--- a/src/app/pages/item-price-histories/item-price-histories-page.css
+++ b/src/app/pages/item-price-histories/item-price-histories-page.css
@@ -1,7 +1,7 @@
 .chart-container {
   height: 400px;
   margin: 24px 0;
-  background: white;
+  background: rgb(246, 250, 250);
   padding: 16px;
   border-radius: 8px;
 }
