--- a/src/app/pages/user-items/user-items-page.html
+++ b/src/app/pages/user-items/user-items-page.html
@@ -23,6 +23,7 @@
   <span class="actions-spacer"></span>
 
   <button mat-raised-button
+  *ngIf="item$ | async as item"
   class="user-item-button"
           [routerLink]="['/items', item.id, 'price-histories']">
     <mat-icon>show_chart</mat-icon>
@@ -30,6 +31,7 @@
   </button>
   
   <a mat-raised-button 
+  *ngIf="item$ | async as item"
   class="user-item-button"
   href="{{item.url}}" target="_blank">
     <mat-icon>open_in_new</mat-icon>
