--- a/src/app/pages/user-items/dialogs/open-user-item-dialog/open-user-item-dialog.html
+++ b/src/app/pages/user-items/dialogs/open-user-item-dialog/open-user-item-dialog.html
@@ -1,38 +1,43 @@
 <div class="dialog-header">
-  <h2 mat-dialog-title>Ouvrir cet item</h2>
-  
-  <div>
-    <p>Prix d'achat : {{ data.userItem.purchasePrice }} €</p>
-    <p>Date d'achat : {{ data.userItem.purchaseDate | date:'dd/MM/yyyy' }}</p>
-    <p>{{ data.userItem.purchaseComment }}</p>
+
+  <div class="dialog-title">
+    <mat-icon class="open-icon">lock_open</mat-icon>
+    <h2 mat-dialog-title>Ouvrir cet item</h2>
   </div>
+
+  <div class="dialog-context">
+    <app-purchase-event [userItem]="data.userItem" />
+  </div>
+
 </div>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
-  <mat-dialog-content>
 
-    <mat-form-field appearance="fill" class="full-width">
+  <mat-dialog-content class="dialog-form">
+    <mat-form-field appearance="outline">
       <mat-label>Date de l'ouverture</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="openingDate">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="full-width">
+    <mat-form-field appearance="outline">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput rows="3" formControlName="openingComment"></textarea>
+      <textarea matInput rows="2" formControlName="openingComment"></textarea>
     </mat-form-field>
 
   </mat-dialog-content>
 
-  <mat-dialog-actions>
-    <button mat-button (click)="cancel()">
-      <mat-icon>undo</mat-icon>
+  <mat-dialog-actions class="dialog-actions">
+    <button mat-button type="button" (click)="cancel()">
       Annuler
     </button>
-    <button mat-raised-button color="primary" type="submit">
+
+    <button mat-flat-button color="primary" type="submit">
       <mat-icon>save</mat-icon>
       Enregistrer
     </button>
   </mat-dialog-actions>
+
 </form>
+
