--- a/src/app/pages/user-items/dialogs/add-user-item-dialog/add-user-item-dialog.html
+++ b/src/app/pages/user-items/dialogs/add-user-item-dialog/add-user-item-dialog.html
@@ -1,35 +1,47 @@
-<h2 class="dialog-header" mat-dialog-title>Ajouter un item</h2>
+<div class="dialog-header">
+
+  <div class="dialog-title">
+    <mat-icon class="purchase-icon">shopping_cart</mat-icon>
+    <h2 mat-dialog-title>Ajouter un item</h2>
+  </div>
+
+</div>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
-  <mat-dialog-content>
 
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Prix d'achat</mat-label>
-      <input matInput type="number" formControlName="purchasePrice">
-    </mat-form-field>
+  <mat-dialog-content class="dialog-form">
 
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Date d'achat</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="purchaseDate">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+    <div class="form-row">
+      <mat-form-field appearance="outline">
+        <mat-label>Prix d'achat</mat-label>
+        <input matInput type="number" formControlName="purchasePrice">
+      </mat-form-field>
 
-    <mat-form-field appearance="fill" class="full-width">
+      <mat-form-field appearance="outline">
+        <mat-label>Date</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="purchaseDate">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <mat-form-field appearance="outline">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput rows="3" formControlName="purchaseComment"></textarea>
+      <textarea matInput rows="2" formControlName="purchaseComment"></textarea>
     </mat-form-field>
 
   </mat-dialog-content>
 
-  <mat-dialog-actions>
-    <button mat-button (click)="cancel()">
-      <mat-icon>undo</mat-icon>
+  <mat-dialog-actions class="dialog-actions">
+    <button mat-button type="button" (click)="cancel()">
       Annuler
     </button>
-    <button mat-raised-button color="primary" type="submit">
+
+    <button mat-flat-button color="primary" type="submit">
       <mat-icon>save</mat-icon>
       Enregistrer
     </button>
   </mat-dialog-actions>
+
 </form>
+
