--- a/src/app/shared/components/confirm-dialog/confirm-dialog.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.html
@@ -1,12 +1,22 @@
-<h3 style="margin-left: 10px;" mat-dialog-title>Confirmez-vous l'action ?</h3>
+<div class="dialog-header">
 
-<mat-dialog-actions>
-    <button mat-button (click)="cancel()">
-        <mat-icon>undo</mat-icon>
-        Annuler
-    </button>
-    <button mat-raised-button color="primary" (click)="confirm()">
-        <mat-icon>check</mat-icon>
-        Confirmer
-    </button>
+  <div class="dialog-title">
+    <h2 mat-dialog-title>Confirmer l’action</h2>
+  </div>
+
+  <div class="dialog-message">
+    Êtes-vous sûr de vouloir continuer ?
+  </div>
+
+</div>
+
+<mat-dialog-actions class="dialog-actions">
+  <button mat-button type="button" (click)="cancel()">
+    Annuler
+  </button>
+
+  <button mat-flat-button color="primary" (click)="confirm()">
+    <mat-icon>check</mat-icon>
+    Confirmer
+  </button>
 </mat-dialog-actions>
