--- a/src/app/pages/user-items/user-item-card/user-item-card.css
+++ b/src/app/pages/user-items/user-item-card/user-item-card.css
@@ -7,16 +7,12 @@ mat-card-content div:last-child {
   margin-bottom: 0;
 }
 
-mat-card{
-  border-left: 5px solid var(--color-purchase);
-}
-
 mat-card.sold {
-  border-right: 5px solid var(--color-sell);
+  border-left: 3px solid var(--color-sell);
 }
 
 mat-card.opened {
-  border-right: 5px solid var(--color-open);
+  border-left: 3px solid var(--color-open);
 }
 
 mat-card-actions.actions {
