--- a/src/app/pages/user-items/user-item-card/user-item-card.html
+++ b/src/app/pages/user-items/user-item-card/user-item-card.html
@@ -1,5 +1,5 @@
 <mat-card
-  class="example-card"
+  class="flex-card"
   appearance="outlined"
   [ngClass]="{
     sold: userItem.sellingPrice,
@@ -41,7 +41,7 @@
       <mat-icon>lock_open</mat-icon>
     </button>
     
-    <span class="actions-spacer"></span>
+    <span class="flex-spacer"></span>
 
     <button
       mat-button
