--- a/src/app/pages/user-items/user-items-page.html
+++ b/src/app/pages/user-items/user-items-page.html
@@ -6,7 +6,7 @@
     <app-item-infos [item]="item"/>
   </div>
 
-  <span class="actions-spacer"></span>
+  <span class="flex-spacer"></span>
 
   <div>
     <app-back-button/>
@@ -20,7 +20,7 @@
     Ajouter un item
   </button>
 
-  <span class="actions-spacer"></span>
+  <span class="flex-spacer"></span>
 
   <button mat-raised-button
   *ngIf="item$ | async as item"
