--- a/src/app/pages/games/game-card/game-card.html
+++ b/src/app/pages/games/game-card/game-card.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" appearance="outlined">
+<mat-card class="flex-card" appearance="outlined">
   <mat-card-header>
     <mat-card-title>{{game.name}}</mat-card-title>
   </mat-card-header>
