--- a/src/app/pages/item-price-histories/item-price-histories-page.html
+++ b/src/app/pages/item-price-histories/item-price-histories-page.html
@@ -6,7 +6,7 @@
     <app-item-infos [item]="item"/>
   </div>
 
-  <span class="actions-spacer"></span>
+  <span class="flex-spacer"></span>
 
   <div>
     <app-back-button/>
