--- a/src/app/pages/item-search/item-search-results/item-card/item-card.html
+++ b/src/app/pages/item-search/item-search-results/item-card/item-card.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" appearance="outlined">
+<mat-card class="flex-card" appearance="outlined">
   <mat-card-header>
     <mat-card-title>{{item.game.name}} - {{item.itemType.name}} {{item.expansion.name}}</mat-card-title>
     <mat-card-subtitle>{{item.complement}} ({{item.locale.name}})</mat-card-subtitle>
