--- a/src/app/shared/css/card.css
+++ b/src/app/shared/css/card.css
@@ -13,7 +13,7 @@ mat-card:hover {
     0 16px 40px rgba(0,0,0,0.25);
 }
 
-mat-card.example-card {
+mat-card.flex-card {
   height: 100%;
   display: flex;
   flex-direction: column;
