Rework of ItemCard

--- a/src/app/pages/user-items/user-items-page.html
+++ b/src/app/pages/user-items/user-items-page.html
@@ -27,7 +27,7 @@
   class="user-item-button"
           [routerLink]="['/items', item.id, 'price-histories']">
     <mat-icon>show_chart</mat-icon>
-    Historique CM
+    Prix CM
   </button>
   
   <a mat-raised-button 
