--- a/src/app/pages/item-search/item-search-results/item-card/item-card.html
+++ b/src/app/pages/item-search/item-search-results/item-card/item-card.html
@@ -1,9 +1,6 @@
 <mat-card class="flex-card" appearance="outlined">
-  <mat-card-header>
-    <mat-card-title>{{item.game.name}} - {{item.itemType.name}} {{item.expansion.name}}</mat-card-title>
-    <mat-card-subtitle>{{item.complement}} ({{item.locale.name}})</mat-card-subtitle>
-  </mat-card-header>
   <mat-card-content>
+    <app-item-infos [item]="item" [multiline]="true"/>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button
@@ -15,7 +12,7 @@
     <button mat-button
             [routerLink]="['/items', item.id, 'price-histories']">
       <mat-icon>show_chart</mat-icon>
-      Historique CM
+      Prix CM
     </button>
 
     <a mat-button href="{{item.url}}" target="_blank">
