--- a/src/app/pages/games/game-card/game-card.css
+++ b/src/app/pages/games/game-card/game-card.css
@@ -1,5 +1,11 @@
-img {
-  height: 350px;
-  object-fit: cover;
-  scale: 0.8;
+.game-card {
+  cursor: pointer;
+  overflow: hidden; /* important pour le crop */
+}
+
+.game-card img[mat-card-image] {
+  height: 300px;        /* hauteur uniforme */
+  object-fit: contain;
+  width: 100%;
+  margin: 0;            /* supprime le margin Material par défaut */
 }
