--- a/src/app/pages/item-types/item-type-card/item-type-card.html
+++ b/src/app/pages/item-types/item-type-card/item-type-card.html
@@ -1,13 +1,13 @@
-<mat-card class="flex-card" appearance="outlined">
-  <mat-card-header>
-    <mat-card-title>{{itemType.name}}</mat-card-title>
-  </mat-card-header>
-  <mat-card-actions>
-    <button mat-button 
-    [routerLink]="['/items']"
-    [queryParams]="{ gameId: gameId, itemTypeId: itemType.id }">
-      <mat-icon>visibility</mat-icon>
-      Voir items
-    </button>
-  </mat-card-actions>
+<mat-card
+  class="clickable-card"
+  appearance="outlined"
+  matRipple
+  [routerLink]="['/items']"
+  [queryParams]="{ gameId: gameId, itemTypeId: itemType.id }"
+>
+
+  <div class="card-center">
+    {{ itemType.name }}
+  </div>
+  
 </mat-card>
