--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <div class="app-container">
   <header class="app-header">
-    <h1>Gestionnaire de collections TCG</h1>
+    <div class="app-header-content">
+      <h1>Gestionnaire de collections TCG</h1>
+    </div>
   </header>
 
   <main class="app-content">
