--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,20 @@
 <div class="app-container">
   <header class="app-header">
     <div class="app-header-content">
-      <h1>Gestionnaire de collections TCG</h1>
+
+      <div class="app-brand">
+        <img
+          mat-card-image
+          class="app-logo"
+          src="/logo.svg"
+          alt="TCG"
+        />
+        <h1>Gestionnaire de collections TCG</h1>
+      </div>
+
     </div>
   </header>
+
 
   <main class="app-content">
     <router-outlet></router-outlet>
