Add Reset button in search page

--- a/src/app/pages/item-search/item-search-filters/item-search-filters.html
+++ b/src/app/pages/item-search/item-search-filters/item-search-filters.html
@@ -45,6 +45,12 @@
   </div>
 
   <mat-card-actions class="filters-actions">
+    
+    <button mat-raised-button type="button" (click)="resetForm()">
+      <mat-icon>restart_alt</mat-icon>
+      Réinitialiser
+    </button>
+
     <button mat-raised-button color="primary" type="submit">
       <mat-icon>search</mat-icon>
       Rechercher
