--- a/src/app/pages/item-search/item-search-filters/item-search-filters.html
+++ b/src/app/pages/item-search/item-search-filters/item-search-filters.html
@@ -46,7 +46,7 @@
 
   <mat-card-actions class="filters-actions">
     
-    <button mat-raised-button type="button" (click)="resetForm()">
+    <button mat-flat-button style="background-color: transparent;" type="button" (click)="resetForm()">
       <mat-icon>restart_alt</mat-icon>
       Réinitialiser
     </button>
